--- a/JS/aula26/index.html
+++ b/JS/aula26/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Modelo</title>
+  <title>IMC</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -54,8 +54,8 @@
     <form id="formulario" method="post">
         <label for="peso">Peso:</label>
         <input id="peso" name="peso" type="number">
-        <label for="altura" for="">Altura:</label>
-        <input id="altura" type="number" name="" id="altura">
+        <label for="altura">Altura:</label>
+        <input id="altura" type="number" name="" id="altura" step="0.01" min="0">
         <button type="submit">Enviar</button>
     </form>
 
