--- a/JS/aula47/index.html
+++ b/JS/aula47/index.html
@@ -15,7 +15,7 @@
     <h1>Timer</h1>
     <p class="relogio">00:00:00</p>
     <div>
-      <button class="inciar">Iniciar</button>
+      <button class="iniciar">Iniciar</button>
       <button class="pausar">Pausar</button>
       <button class="zerar">Zerar</button>
     </div>
